--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,8 @@ __pycache__/
 __pycache__/*
 __pycache__/constants.*
 __pycache__/constants*
+__pycache__/character.*
+__pycache__/character*
+
 debug*
 
