--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-__pycache__\
+__pycache__/
+**/__pycache__
 __pycache__/*
 __pycache__/constants.*
 __pycache__/constants*
@@ -6,4 +7,6 @@ __pycache__/character.*
 __pycache__/character*
 
 debug*
+
+__pycache__/character.cpython-310.pyc
 
